--- a/src/style.scss
+++ b/src/style.scss
@@ -49,6 +49,88 @@ $color-black: #000;
     outline: none;
   }
 
+  &_disabled {
+    .#{$prefixClass}__track {
+      background: $color-grey-light;
+    }
+
+    .#{$prefixClass}__handle,
+    .#{$prefixClass}__dot {
+      background: $color-white;
+      border-color: $color-grey-light;
+      box-shadow: none;
+      cursor: not-allowed;
+    }
+
+    .#{$prefixClass}__mark,
+    .#{$prefixClass}__dot {
+      cursor: not-allowed !important;
+    }
+  }
+
+  &_vertical {
+    height: 100%;
+    padding: 0 5px;
+    width: 14px;
+
+    .#{$prefixClass} {
+      &__rail {
+        height: 100%;
+        width: 6px;
+      }
+
+      &__track {
+        bottom: 0;
+        left: 5px;
+        width: 6px;
+      }
+
+      &__handle {
+        margin-left: -4px;
+        touch-action: pan-y;
+      }
+
+      &__mark {
+        left: 18px;
+        top: 0;
+      }
+
+      &__step {
+        height: 100%;
+        width: 4px;
+      }
+
+      &__dot {
+        left: -1px;
+        margin-bottom: 0;
+
+        &:first-child {
+          margin-bottom: 0;
+        }
+
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+
+      &__dots,
+      &__marks {
+        height: 100%;
+      }
+
+      &__marks {
+        bottom: 0;
+        top: 0;
+      }
+
+      &__tooltip {
+        bottom: initial;
+        left: 0;
+        transform: translate(-125%, -25%);
+      }
+    }
+  }
+
   &__rail {
     background-color: $color-grey-light;
     border: 1px solid $color-dark-opacity-25;
@@ -93,11 +175,11 @@ $color-black: #000;
         z-index: 100;
       }
     }
-  }
 
-  &__handle:hover {
-    .#{$prefixClass}__tooltip {
-      display: block;
+    &:hover {
+      .#{$prefixClass}__tooltip {
+        display: block;
+      }
     }
   }
 
@@ -172,87 +254,5 @@ $color-black: #000;
 
   &__dot_reverse {
     margin-right: -4px;
-  }
-
-  &_disabled {
-    .#{$prefixClass}__track {
-      background: $color-grey-light;
-    }
-
-    .#{$prefixClass}__handle,
-    .#{$prefixClass}__dot {
-      background: $color-white;
-      border-color: $color-grey-light;
-      box-shadow: none;
-      cursor: not-allowed;
-    }
-
-    .#{$prefixClass}__mark,
-    .#{$prefixClass}__dot {
-      cursor: not-allowed !important;
-    }
-  }
-}
-
-.#{$prefixClass}_vertical {
-  height: 100%;
-  padding: 0 5px;
-  width: 14px;
-
-  .#{$prefixClass} {
-    &__rail {
-      height: 100%;
-      width: 6px;
-    }
-
-    &__track {
-      bottom: 0;
-      left: 5px;
-      width: 6px;
-    }
-
-    &__handle {
-      margin-left: -4px;
-      touch-action: pan-y;
-    }
-
-    &__mark {
-      left: 18px;
-      top: 0;
-    }
-
-    &__step {
-      height: 100%;
-      width: 4px;
-    }
-
-    &__dot {
-      left: -1px;
-      margin-bottom: 0;
-
-      &:first-child {
-        margin-bottom: 0;
-      }
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-
-    &__dots,
-    &__marks {
-      height: 100%;
-    }
-
-    &__marks {
-      bottom: 0;
-      top: 0;
-    }
-
-    &__tooltip {
-      bottom: initial;
-      left: 0;
-      transform: translate(-125%, -25%);
-    }
   }
 }
