--- a/demo/components/input/input.pug
+++ b/demo/components/input/input.pug
@@ -9,8 +9,8 @@ mixin input(props)
       let isChecked = Boolean(value && type === "checkbox");
       let className = 'input';
       let classNames = `${className} js-${className}`;
-      classNames += isControl && ` ${className}_control js-${className}_control` || '';
-      classNames += isFirst && ` ${className}_first js-${className}_first` || '';
+      classNames += isControl ? ` ${className}_control js-${className}_control` : '';
+      classNames += isFirst ? ` ${className}_first js-${className}_first` : '';
       let id = Math.random().toString(16).substr(2);
       if (label) {
           label = { ...label, id };
