--- a/demo/components/values-item/values-item.pug
+++ b/demo/components/values-item/values-item.pug
@@ -6,10 +6,10 @@ mixin values-item(props)
     -
       let className = 'values-item';
       let classNames = `${className} js-${className}`;
-      let { index, item, buttonRemove } = props;
+      let { index, buttonRemove, ...other } = props;
     div(class=classNames)
       span(class=`${className}__index js-${className}__index`) #{index + 1}:
       span(class=`${className}__input js-${className}__input`)
-        +input(item)
+        +input(other)
       span(class=`${className}__control js-${className}__control`)
         +button(buttonRemove)
