--- a/demo/components/input/input.pug
+++ b/demo/components/input/input.pug
@@ -5,17 +5,15 @@ include ../button/button
 mixin input(props)
   if props
     -
-      let { label, type = 'number', content, value, key, isControl, data = {}, link, isFirst, buttonRemove } = props;
+      let { label, type = 'number', value, data, link, idDisabled } = props;
       let isChecked = Boolean(value && type === "checkbox");
       let className = 'input';
       let classNames = `${className} js-${className}`;
-      classNames += isControl ? ` ${className}_control js-${className}_control` : '';
-      classNames += isFirst ? ` ${className}_first js-${className}_first` : '';
       let id = Math.random().toString(16).substr(2);
       if (label) {
           label = { ...label, id };
       }
-    div(class=classNames, data-data=data, data-key=key)
+    div(class=classNames, data-data=data)
       if link
         div(class=`${className}__link`)
           +link(link)
@@ -23,15 +21,11 @@ mixin input(props)
         div(class=`${className}__label`)
           +label(label)
       div(class=`${className}__section`) 
-        if key >= 0 && isControl
-          span(class=`${className}__section-key js-${className}__section-key`) #{key + 1}:
         input(
           type=type,
           id=id,
           checked=isChecked,
           value=value,
-          class=`${className}__input js-${className}__input`
+          class=`${className}__input js-${className}__input`,
+          disabled=idDisabled
         )
-        if isControl
-          div(class=`${className}__button-control js-${className}__button-control`)
-            +button(buttonRemove)
