fix(): add Slider, correct Example, Panel, Input #3

--- a/demo/components/slider/slider.pug
+++ b/demo/components/slider/slider.pug
@@ -1,6 +1,6 @@
 mixin slider(props = {})
   -
     let className = 'slider';
-    let classNames = `${className}`;
+    let classNames = `${className} js-${className}`;
   div(class=classNames)
     div(class=`${className}__dummy js-${className}__dummy`)
