--- a/src/style.scss
+++ b/src/style.scss
@@ -3,9 +3,11 @@
 }
 
 @mixin linear-gradient($degrees, $top-color, $bottom-color, $opacity) {
-  background: linear-gradient($degrees,
-  rgba($top-color, $opacity) 0%,
-  rgba($bottom-color, $opacity) 100%);
+  background: linear-gradient(
+    $degrees,
+    rgba($top-color, $opacity) 0%,
+    rgba($bottom-color, $opacity) 100%
+  );
   filter: progid:dximagetransform.microsoft.gradient(startColorstr='#{rgba($top-color, $opacity)}', endColorstr='#{rgba($bottom-color, $opacity)}', GradientType=0); /* IE6-9 */
 }
 
@@ -154,9 +156,11 @@ $color-black: #000;
   }
 
   &__handle {
-    background: linear-gradient(180deg,
-    $color-green-light 0%,
-    $color-blue-light 100%);
+    background: linear-gradient(
+      180deg,
+      $color-green-light 0%,
+      $color-blue-light 100%
+    );
     border: 2px solid $color-white;
     border-radius: 50%;
     cursor: pointer;
